attempt 2 at fixing overflow bug

--- a/andy-website/src/Components/css/Home.css
+++ b/andy-website/src/Components/css/Home.css
@@ -33,8 +33,9 @@
   background-position: 50% 0;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   filter: blur(6px);
+  overflow: hidden;
 }
 
 img.bg {
